--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -13,6 +13,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 margin: 0.5rem 0.5rem 0 9.5rem;
 
 
+
 	.header {
 		@include bRad (0.5rem);
 		box-shadow: $shad;
@@ -28,18 +29,18 @@ margin: 0.5rem 0.5rem 0 9.5rem;
 		.menu {
 
 			.toggleMenu {
+				width: 8.2rem;
 				padding: 0.5rem;
 				margin-left: 0.5rem;
 				box-shadow: $shad;
+				border:1px solid white;
 				@include bRad (0.5rem);
 				cursor: pointer;
 				&:hover {
 					background-color: rgba(0,0,0,0.1);
 				}
-
 			}
 		}
-
 		.logo {
 
 			.logoImg {
@@ -49,13 +50,27 @@ margin: 0.5rem 0.5rem 0 9.5rem;
 				@include bRad (100%);
 			}
 		}
-
-
 	}
+}
+.headerWrapper.headerDisableMenu {
+	margin: 0 auto 0.5rem auto;
 }
 @media screen and (max-width: 650px) {
 	.headerWrapper {
 		margin: 0 auto 0.5rem auto;
 	}
+}
+@media screen and (max-width: 550px) {
+	.headerWrapper {
+
+		.header {
+			.logo {
+				display: none;
+			}
+		}
+
+	}
+
+
 }
 
