--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -15,14 +15,16 @@
     margin-left: 9.5rem;
     margin-right: 0.5rem;
     max-width: 65rem;
-
-
   }
   @media screen and (max-width: 650px) {
     .contentWrapper {
       margin: 0 auto;
     }
   }
+  .contentWrapper.contentDisableMenu {
+    margin: 0 auto;
+  }
+
 
 
   .footerWrapper {
@@ -31,4 +33,10 @@
 
   }
 
+}
+@media screen and (max-width: 650px) {
+  .appWrapper {
+    font-size: 85%;
+
+  }
 }
