--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -22,12 +22,20 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 		margin-top: 2rem;
 		@include bRad (0.5rem);
 
+		.mail {
+
+			.link {
+				text-decoration: none;
+			}
+		}
+
 		.linkLineWrapper {
 			display: flex;
 			margin-top: 0.5rem;
 
 			.link {
 				text-decoration: none;
+				color: black;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
@@ -39,7 +47,7 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 
 					margin: 0 0.2rem;
 					max-width: 2.5rem;
-					border: 1px solid blue;
+					border: 1px solid black;
 					@include bRad (100%);
 
 				}
