--- a/src/SideBar/SideBar.module.scss
+++ b/src/SideBar/SideBar.module.scss
@@ -63,10 +63,12 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 
 @media screen and (max-width: 650px) {
 	.sideBarWrapper {
-		left: 0;
-		top: 4rem;
+		left: 0.5rem;
+		top: 0.5rem;
 		max-width: 100%;
-		position: fixed;
+		position: sticky;
+		margin-top: 0;
+
 
 
 		.sideBar {
