--- a/src/ToDo/ToDo.module.scss
+++ b/src/ToDo/ToDo.module.scss
@@ -107,14 +107,16 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 
 				.search {
 					max-width: 100%;
-
-
 					box-shadow: $shad;
 					@include bRad (0.5rem);
 					padding: 2px;
 					cursor: pointer;
-
 				}
+				.search:hover {
+					background-color: rgba(0,0,0,0.1);
+				}
+
+
 
 				.closeSearch {
 					color: red;
