--- a/src/SideBar/SideBar.module.scss
+++ b/src/SideBar/SideBar.module.scss
@@ -2,12 +2,10 @@
 	border-radius: $br;
 	outline: none;
 }
-
 $shad: 0 1px 4px rgba(0, 0, 0, .3),
 -23px 0 20px -23px rgba(0, 0, 0, .6),
 23px 0 20px -23px rgba(0, 0, 0, .6),
 inset 0 0 40px rgba(0, 0, 0, .1);
-
 
 .sideBarWrapper {
 	float: left;
@@ -32,7 +30,6 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 			@include bRad (100%);
 		}
 
-
 		.sideBarLink {
 			max-width: 100%;
 			text-align: center;
@@ -44,47 +41,39 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 			text-decoration: none;
 			color: black;
 			font-weight: bold;
-
 			&:first-child {
 				margin-top: 4rem;
 			}
-
 			&:hover {
-				background: rgba(0, 0, 0, 0.1);
+				background: rgba(0, 0, 0, 0.2);
 			}
 		}
 	}
 }
-
 .sideBarWrapper.disableShow {
 	display: none;
 
 }
-
 @media screen and (max-width: 650px) {
 	.sideBarWrapper {
 		left: 0.5rem;
-		top: 0.5rem;
+		top: 5.4rem;
 		max-width: 100%;
-		position: sticky;
+		position: fixed;
 		margin-top: 0;
 		z-index: 2;
-
-
+		background-color: lightgray;
 
 		.sideBar {
 			display: inline-flex;
 			flex-direction: column;
-			background-color: rgba(0, 0, 0, 0.6);
 			@include bRad (0.3rem);
 
 			.sideBarLink {
-				color: white;
 				max-width: 100%;
 				display: block;
 				padding: 0.5rem;
-				margin-bottom: 1rem;
-
+				margin-bottom: 0.5rem;
 				&:first-child {
 					margin: 0.2rem;
 				}
