--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -9,72 +9,33 @@ inset 0 0 40px rgba(0, 0, 0, .1);
 
 
 .headerWrapper {
-	margin: 0.5rem 0.5rem 0 9.5rem;
+	margin: 0 auto;
 
 	.header {
 		@include bRad (0.5rem);
 		box-shadow: $shad;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
 		padding: 3px;
 
 		.headTitle {
 			margin: 0;
 		}
 
-		.menu {
-
-			.toggleMenu {
-				background-color: rgba(0, 0, 0, 0.1);
-				width: 8.2rem;
-				padding: 0.5rem;
-				margin-left: 0.5rem;
-				box-shadow: $shad;
-				border: 1px solid white;
-				@include bRad (0.5rem);
-				cursor: pointer;
-
-				&:hover {
-					background-color: rgba(0, 0, 0, 0.2);
-				}
-			}
-		}
 
 		.logo {
 
 			.logoImg {
-				margin: 0 0.5rem;
-				max-width: 3.0rem;
-				border: 1px solid blue;
-				@include bRad (100%);
+
 			}
 		}
 	}
 }
 
-.headerWrapper.headerDisableMenu {
-	margin: 0 auto 0.5rem auto;
+.headerWrapper{
+	margin: 0 auto;
 }
 
 @media screen and (max-width: 650px) {
-	.headerWrapper {
-		margin: 0 auto 0.5rem auto;
-	}
-}
-
-@media screen and (max-width: 550px) {
-	.headerWrapper {
-
-		.header {
-
-			.logo {
-				display: none;
-			}
-		}
-
-	}
-
 
 }
+
 
